--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "image-hide",
   "version": "0.0.3",
   "description": "Put a secret image into another image using alpha channel magic.",
-  "main": "index.js",
+  "main": "index.mjs",
   "scripts": {
     "test": "mocha"
   },
