--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
   "license": "MIT",
   "dependencies": {
     "image-decode": "^1.2.2",
-    "image-encode": "^1.3.0",
-    "jpeg-js": ">=0.4.0"
+    "image-encode": "^1.3.1",
+    "jpeg-js": ">=0.4.4"
   },
   "devDependencies": {
-    "mocha": "^7.2.0"
+    "mocha": "^10.0.0"
+  },
+  "overrides": {
+    "image-decode": {
+      "jpeg-js": "$jpeg-js"
+    }
   }
 }
